--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Hello World</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<div class="jumbotron text-center">
-  <h1>Hello world of Web Programming</h1>
-  <p>This is fully responsive!</p> 
-</div>
+  <div class="jumbotron d-flex align-items-center vh-100 w-100 mb-0 bg-dark text-white">
+    <div class="container text-center">
+      <h1 class="display-4">Hello world of Web Programming</h1>
+      <p>This is fully responsive!</p>
+    </div>
+  </div>
 </body>
+
 </html>
