--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="jumbotron d-flex align-items-center vh-100 w-100 mb-0 bg-dark text-white">
     <div class="container text-center">
-      <h1 class="display-4">Hello world of Web Programming</h1>
+      <h1>Hello world of Web Programming</h1>
       <p>This is fully responsive!</p>
     </div>
   </div>
